<resources>
    <string name="app_name">Book Store</string>
    <string name="menu_testdata">Insert test data</string>

    <string name="title_add_book">Add New Book</string>
    <string name="title_edit_book">Update Book Details</string>
    <string name="title_book_details">Book Details</string>


    <string name="toast_book_sold">Book Sold!</string>
    <string name="toast_book_sold_out">THIS BOOK IS OUT OF STOCK. REORDER NOW.</string>
    <string name="toast_stock_invalid">Stock must have a valid entry</string>
    <string name="toast_stock_exceeded">999 is the maximum quantity allowed</string>
    <string name="toast_not_updated">No Updates to Show</string>
    <string name="toast_details_updated">Details updated successfully</string>
    <string name="toast_delete_fail">Delete Failed</string>
    <string name="toast_delete_success">has been deleted</string>
    <string name="toast_no_books_to_delete">THERE ARE NO BOOKS TO DELETE</string>
    <string name="toast_book_not_found">Book details not found</string>
    <string name="toast_title_required">Book name is required</string>
    <string name="toast_supplier_required">Supplier name is required</string>
    <string name="toast_price_required">Price is required</string>


    <string name="dialogue_unsaved_warning">There are changes which have not been saved, do you wish to proceed?</string>
    <string name="dialogue_unsaved_positive">Discard changes</string>
    <string name="dialogue_unsaved_negative">Keep editing</string>
    <string name="dialogue_delete_warning">Are you sure you want to delete?</string>
    <string name="dialogue_delete_positive">Continue</string>
    <string name="dialogue_delete_negative">cancel</string>

    <string name="txt_no_books">No Books To Show</string>
    <string name="txt_click_to_add">Click to add book to inventory</string>
    <string name="txt_book_title">Book Title:</string>
    <string name="txt_author">Author</string>
    <string name="txt_supplier_info">Supplier Info:</string>
    <string name="txt_price">Price:</string>
    <string name="txt_stock_qty">Quantity In Stock:</string>

    <string name="et_hint_book_title">Book Title</string>
    <string name="et_hint_author">Author</string>
    <string name="et_hint_supplier_tel">Supplier Phone Number</string>
    <string name="et_hint_supplier">Supplier Name</string>
    <string name="et_hint_price">Price £</string>
    <string name="et_hint_discount">Discount %</string>

    <string name="tv_stock_qty">Stock Quantity</string>
    <string name="tv_stock_min">Set Stock Minimum</string>

    <string name="txt_btn_delete">delete</string>
    <string name="txt_btn_save">save</string>
    <string name="txt_btn_cancel">cancel</string>
    <string name="txt_btn_sale">Sale</string>
    <string name="txt_btn_edit">Edit</string>
    <string name="txt_btn_back">back</string>
    <string name="txt_btn_call">Call</string>

    <string name="txt_access_increase_stock">increase stock</string>
    <string name="txt_access_decrease_stock">decrease stock</string>
    <string name="txt_access_decrease_min_stock">decrease minimum stock</string>
    <string name="txt_access_increase_min_stock">increase minimum stock</string>
    <string name="txt_access_sale_button">sale button</string>
    <string name="img_access_empty_inventory">Empty inventory image</string>
    <string name="GBP">£</string>


</resources>
